# moneyd-service

./: .gitignore  Cargo.toml
config/: consumed-files-template.json  existing-hashes-test-template.txt  moneyd-config-template.toml
src/: ingestion.rs  main.rs
src/analyzer/: analyze.rs
src/quickbooks/: parser.rs
src/service/: api.rs  loginservice.rs  mod.rs  statementservice.rs  transactionservice.rs
src/ui/: loginwindow.rs  mod.rs
src/utils/: csvutil.rs  globalutil.rs  logintransporter.rs  mod.rs  transactiontransporter.rs  transport.rs
