[package]
name = "moneyd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"]}
csv = { version = "1.4.0" }
chrono = { version = "0.4.42", features = ["serde"]}
rust_decimal = { version = "1.39.0" }
reqwest = { version = "0.12.24", features = ["json"]}
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
cursive = { version = "0.21.1", features = ["toml"] }
clap = { version = "4.5.51", features = ["derive"] }
toml = "0.9.8"
sha2 = "0.10"
quick-xml = { version = "0.38.4", features = ["serde", "serialize"]}